--- a/Brandon_Form.html
+++ b/Brandon_Form.html
@@ -12,15 +12,27 @@
 
 <body>
     <div class="container">
-        <h3 class="text-center">Brandon's <b>Form</b>idable, Uni<b>Form</b>, In<b>Form</b>ative and <b>Form</b>ulated <h1 class="text-center"><b>Form</b></h1></h3>
+        <h3 class="text-center">Brandon's <b>Form</b>idable, Uni<b>Form</b>, In<b>Form</b>ative and <b>Form</b>ulated
+            <h1 class="text-center"><b>Form</b></h1>
+        </h3>
+
+        <form>
+            <div class="form-group">
+                <label for="usr">Name:</label>
+                <input type="text" class="form-control" id="usr" name="user_name">
+            </div>
+            <div class="form-group">
+                <label for="mail">Email:</label>
+                <input type="email" class="form-control" id="mail" name="user_mail">
 
 
+            </div>
 
 
-
-
-
-
-
-
+            <div class="radio">
+                <label class="radio-inline"><input type="radio" name="optradio">Freshman</label>
+                <label class="radio-inline"><input type="radio" name="optradio">Sophomore</label>
+                <label class="radio-inline"><input type="radio" name="optradio">Junior</label>
+                <label class="radio-inline"><input type="radio" name="optradio">Senior</label>
+            </div>
     </div>
